# moneymentum

./: .coderabbit.yaml  .devenv.flake.nix  .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  AGENTS.md  Anchor.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOC.MD  Dockerfile  LICENSE  Quant.hs  README.md  ROADMAP.md  SPEC.md  VAULT.md  alphalab.py  analysis.py  backfill.py  backtest.py  bounties.md  clippy.toml  compare.py  config.toml  contributions.md  csv_duplicate_checker.py  dashboard.py  datagetta.py  deploy.nix  derive.example.toml  devenv.nix  disko.nix  docker-compose.yml  drift-perp-markets.json  example.toml  flake.nix  (+25 more)
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  nix-build-quiet.nu  nix-build-quiet.sh
.sqlx/: query-42bf0f240bb02e790ca2a1df830f84fdb5233bb3b0ff3b2f0d0a882b3c1be882.json
.tmp/: ascii-commit-otherdocs.diff  ascii-commit-stories.diff  issue-item-map.txt  issues.json  pr160-diff  project-items.json  stale-verify.md  story-titles.txt
adrs/: 0001-event-sorcery-persistence-foundation.md  0002-venue-integration-crate-architecture.md  0003-effect-ts-frontend.md  0003-typed-identifiers.md
config/: bounties.toml  moneymentum.toml  secrets.nix  staging.toml
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/timeseries/: Cargo.toml
crates/timeseries/src/: lib.rs  marker.rs  pipeline.rs  series.rs  transform.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: lib.rs  mock.rs  turnkey.rs  turnkey_evm.rs  turnkey_solana.rs
data/: 0ANAL_df.csv  0analysis_df.csv  0analysis_df1w.csv  anal0.csv  backtest_results.csv  candles.csv  drift-perp-markets.json  hourly.csv  long_score.csv  markets.csv  ohlcv.csv  ohlcv15m.csv  ohlcv1d.csv  ohlcv1h.csv  ohlcv1w.csv  picks.csv  return.csv  sample.csv  sharpe.csv  short_score.csv  strategy_metrics.csv  strategy_performance.csv  ticker.csv
data_test/: ohlcv_1d.csv
debug_data/: funding_rate_data.json  ohlcv_data.json
docs/: gitbutler.md  portfolio-rebalancer.md  risk-methodology.md
fixtures/: funding_rate_1h.csv  ohlcv_15m.csv  ohlcv_1d_beta.csv  ohlcv_1h.csv
frontend/: .env.example  .eslintcache  .gitignore  AGENTS.md  README.md  SHADCN_RULES.md  bun.nix  components.json  default.nix  eslint.config.js  index.html  package-lock.json  package.json  playwright-chromium.ts  playwright.contract.config.ts  playwright.visual.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite-plugins.d.ts  vite.config.ts
hyperliquid/: main.py  settings.py
infra/: .gitignore  .terraform.lock.hcl  README.md  backend.tf  default.nix  main.tf  outputs.tf  terraform.tfstate.age  terraform.tfvars.age  terraform.tfvars.example  variables.tf
manual_checkers/: check_duplicates.py  compare.py  download_full_db_supabase.py
manual_tools/: compare.py
migrations/: 20260208011202_cqrs_event_store.sql  20260208011214_ingestion_view.sql  20260522084600_ingestion_runs.sql  20260618052212_reconcile_event_store_for_event_sorcery.sql  20260618052215_replace_apalis_jobs_with_blob_schema.sql  20260618055334_create_portfolio_view.sql  20260618072430_create_ingestion_run_view.sql  20260618073804_create_market_enablement_view.sql  20260618073805_create_market_catalog_view.sql  20260618073806_per_work_ingestion_running_slot.sql
omnix/: AGENTS.md  ROADMAP.md
perpy/: dydx.py  dydx_test.py  picks.py  viz.py
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
proptest-regressions/: lib.txt  main.txt  risk.txt
public/: index.html  manifest.json
quantopian/: pairs-trading.ipynb
scripts/: gitbutler-stack.nu  gitbutler-stack.test.nu  pr-stack-footer.nu  pr-stack-footer.test.nu
src/: App.tsx  beta.rs  candle.rs  dataframe.rs  derive.rs  factors.rs  finance.rs  funding.rs  hyperliquid.rs  index.tsx  ingestion.rs  lib.rs  lifecycle.rs  local_ingest.rs  main.rs  market_catalog.rs  market_enablement.rs  market_metadata.rs  portfolio.rs  portfolio_comparison.rs  readonly_portfolio.rs  risk.rs  screener.rs  simulation.rs  timeframe.rs  venue.rs  wire.rs
stories/: 0x001.select-perps-from-screener.md  0x002.edit-target-position-allocations.md  0x003.adjust-account-leverage.md  0x004.preview-staged-rebalance-trades.md  0x005.execute-rebalance.md  0x006.protect-invalid-rebalances.md  0x007.persist-draft-portfolio-targets.md  0x008.keep-app-deployed-and-reachable.md  0x009.serve-app-from-domain.md  0x00a.verify-deployed-hyperliquid-long-short-rebalancing.md  0x00b.show-bitcoin-beta-for-active-portfolio.md  0x00c.add-read-only-bitcoin-addresses.md  0x00d.include-read-only-bitcoin-holdings-in-beta.md  0x00e.target-ending-bitcoin-beta-while-hedging.md  0x00f.authenticate-portfolio-ownership-by-solana-pubkey.md  0x010.view-portfolios-by-public-key-url.md  0x011.hide-portfolio-details-for-fee.md  0x012.add-read-only-wallets-on-other-chains.md  0x013.enter-protective-put-positions.md  0x014.simulate-historical-bitcoin-crashes.md  0x015.simulate-stressed-crash-correlations.md  0x016.roll-protective-puts-before-final-month.md  0x017.deposit-into-vault.md  0x018.withdraw-from-vault.md  0x019.use-derive-options-for-protective-puts.md  0x01a.compare-target-vs-current-portfolio.md  0x01b.show-risk-analytics-for-active-portfolio.md  0x01c.screen-perps-by-factor.md  0x01d.simulate-staged-portfolio-metrics.md  0x01e.trade-hyperliquid-spot-positions.md  0x01f.protocol-revenue-buybacks.md  0x020.transparent-fee-calculations.md  0x021.participate-in-governance.md  0x022.earn-bounties-for-contributions.md  0x023.switch-event-sourcing-wrapper.md  0x024.sync-encrypted-local-state.md  README.md
test_data/: ohlcv1d.csv  ohlcv1w.csv
tests/: api.rs  health.rs  test_chronos.py  test_server.py  test_strategy.py  vault.ts
user-stories/: 001-select-perps-from-screener.md  002-edit-target-position-allocations.md  003-adjust-account-leverage.md  004-preview-staged-rebalance-trades.md  005-execute-rebalance.md  006-protect-invalid-rebalances.md  007-persist-draft-portfolio-targets.md  008-keep-app-deployed-and-reachable.md  009-serve-app-from-domain.md  (+38 more)
utils/: __init__.py  (+1 more)
(+303 files in other folders)
