# TEMP-STANDALONE-WORKSPACE: this worktree is nested under the parent repo's
# Cargo workspace; declaring our own root keeps cargo/rustfmt from adopting it.
# The master merge replaces this with master's real [workspace] (members =
# [".", "crates/*"]).
[workspace]

[package]
name = "moneymentum"
version = "0.1.0"
edition = "2024"

[dependencies]
apalis = "0.7.4"
apalis-sql = { version = "0.7.4", features = ["sqlite"] }
async-trait = "0.1.89"
backon = "1.6.0"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
cqrs-es = "0.4.11"
futures = "0.3.31"
hyperliquid_rust_sdk = "0.6.0"
reqwest = { version = "0.13", features = ["json"] }
polars = { version = "0.51", features = [
  "parquet",
  "lazy",
  "dtype-datetime",
  "strings",
  "csv",
  "temporal",
  "json",
] }
rocket = { version = "0.5.1", features = ["json"] }
rust_decimal = { version = "1.40.0", features = ["serde-with-str"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlite-es = { git = "https://github.com/ST0x-Technology/st0x.issuance" }
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
  "migrate",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
tokio-tungstenite = { version = "0.29.0", features = [
  "rustls-tls-webpki-roots",
] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Zero tolerance for panics in non-test code
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
unimplemented = "deny"
indexing_slicing = "deny"

enum_glob_use = "deny"

pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

doc_markdown = "allow"
items_after_statements = "allow"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

[dev-dependencies]
proptest = "1.10.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
rust_decimal_macros = "1.40.0"
serde_json = "1.0.149"
tempfile = "3.24.0"
tracing-test = "0.2.5"
wiremock = "0.6.5"
