[package]
name = "moneymentum"
version = "0.1.0"
edition = "2024"
authors = ["Data Clique Software Design FZCO"]

[dependencies]
apalis = "0.7.4"
apalis-sql = { version = "0.7.4", features = ["sqlite"] }
async-trait = "0.1.89"
backon = "1.6.0"
bitcoin = "0.32.8"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
futures = "0.3.31"
getrandom = "0.4.3"
hyperliquid_rust_sdk = "0.6.0"
polars = { version = "0.51", features = [
  "parquet",
  "lazy",
  "dtype-datetime",
  "strings",
  "csv",
  "temporal",
  "json",
] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rocket = { version = "0.5.1", features = ["json"] }
rust_decimal = { version = "1.40.0", features = ["serde-with-str"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
  "migrate",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.29.0", features = [
  "rustls-tls-webpki-roots",
] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Zero tolerance for panics in non-test code
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
unimplemented = "deny"
indexing_slicing = "deny"

enum_glob_use = "deny"

pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

doc_markdown = "allow"
items_after_statements = "allow"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

[dev-dependencies]
proptest = "1.10.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
rust_decimal_macros = "1.40.0"
serde_json = "1.0.149"
tempfile = "3.24.0"
tracing-test = "0.2.5"
wiremock = "0.6.5"

# Single-package crate: declaring the workspace root keeps cargo from walking up
# into an outer workspace when this repo is checked out inside one (e.g. a git
# worktree under another project), which otherwise breaks cargo metadata.
[workspace]
