[workspace]
members = [".", "crates/timeseries"]

[workspace.dependencies]
polars = { version = "0.51" }
proptest = "1.10.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0" }
tower = { version = "0.5" }
tracing = "0.1.44"
tracing-test = "0.2.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Zero tolerance for panics in non-test code
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
unimplemented = "deny"
indexing_slicing = "deny"

enum_glob_use = "deny"

pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

doc_markdown = "allow"
items_after_statements = "allow"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

[package]
name = "moneymentum"
version = "0.1.0"
edition = "2024"
authors = ["Data Clique Software Design FZCO"]

[dependencies]
apalis = "=1.0.0-rc.9"
apalis-sqlite = "=1.0.0-rc.8"
async-trait = "0.1.89"
backon = "1.6.0"
bitcoin = "0.32.8"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
event-sorcery = { git = "https://github.com/ST0X-Technology/event-sorcery", tag = "0.2.0-rc2", version = "0.1.0" }
futures = "0.3.31"
getrandom = "0.4.3"
hyperliquid_rust_sdk = "0.6.0"
polars = { workspace = true, features = [
  "parquet",
  "lazy",
  "dtype-datetime",
  "strings",
  "csv",
  "temporal",
  "json",
] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rocket = { version = "0.5.1", features = ["json"] }
rust_decimal = { version = "1.40.0", features = ["serde-with-str"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.9.0", features = [
  "sqlite",
  "chrono",
  "runtime-tokio",
  "tls-rustls",
  "migrate",
  "derive",
] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.29.0"
toml = "0.9.11"
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }

[lints]
workspace = true

[dev-dependencies]
event-sorcery = { git = "https://github.com/ST0X-Technology/event-sorcery", tag = "0.2.0-rc2", features = [
  "test-support",
] }
proptest.workspace = true
reqwest = { version = "0.13.2", features = ["blocking"] }
rust_decimal_macros = "1.40.0"
serde_json = "1.0.149"
tempfile = "3.24.0"
tracing-test.workspace = true
wiremock = "0.6.5"
