[package]
name = "derive"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3.31"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror.workspace = true
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tokio-tungstenite = "0.29.0"
tracing.workspace = true
url = { version = "2.5.8", features = ["serde"] }

[lints]
workspace = true
