[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[features]
mock = []
turnkey = [
  "dep:turnkey_client",
  "dep:turnkey_api_key_stamper",
  "dep:hex",
  "dep:solana-pubkey",
  "dep:solana-signature",
  "dep:uuid",
  "dep:tracing",
  "dep:alloy-primitives",
]

[dependencies]
async-trait = "0.1"
thiserror = "2"

turnkey_client = { version = "0.6.0", optional = true }
turnkey_api_key_stamper = { version = "0.6.0", optional = true }
hex = { version = "0.4", optional = true }
solana-pubkey = { version = "4.2.0", optional = true }
solana-signature = { version = "3.4.1", optional = true }
uuid = { version = "1.23.2", default-features = false, optional = true }
tracing = { version = "0.1.44", optional = true }
alloy-primitives = { version = "1.5.7", optional = true }

[dev-dependencies]
wallet = { path = ".", features = ["mock", "turnkey"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6.5"
tracing-test = "0.2.5"
serde_json = "1.0.150"

[lints]
workspace = true
