[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[features]
mock = ["dep:tracing"]

[dependencies]
async-trait = "0.1"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
# Self-referential dev-dependency: enables the `mock` feature for this crate's
# own tests via feature unification, so MockWallet and its tracing logging
# compile under `cargo test` without making `mock` a default feature.
wallet = { path = ".", features = ["mock"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-test = "0.2"

[lints]
workspace = true
