[package]
name = "vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))',
  'cfg(target_os, values("solana"))',
]

[dependencies]
anchor-lang = "0.32"
